log
Fri 25 Aug 2023 02:06:52 AM UTC: 
 tests:  0|6
total_score: 0/70
f3164a2
Fri 25 Aug 2023 02:26:56 AM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:15: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   38 |     nuevaLista->first = NULL;
      |               ^~
list.c:39:15: error: ‘List’ {aka ‘struct List’} has no member named ‘last’
   39 |     nuevaLista->last = NULL;
      |               ^~
Compilation failed
73fcd7d
